# raspberry-iot

./: .gitignore  CLAUDE.md  LICENSE  README.md  ansible.cfg  hosts  iot.yml
IoT/: hosts
IoT/group_vars/: all.yml
roles/common/handlers/: main.yml
roles/common/tasks/: apt.yml  cron.yml  hosts.yml  main.yml  rsyslog.yml  service.yml
roles/grafana/defaults/: main.yml
roles/grafana/handlers/: main.yml
roles/grafana/tasks/: install.yml  main.yml
roles/influxdb/defaults/: main.yml
roles/influxdb/handlers/: main.yml
roles/influxdb/tasks/: configure.yml  database.yml  install.yml  main.yml
roles/inkbird_ibsth/defaults/: main.yml
roles/inkbird_ibsth/files/: DeviceList.csv  inkbird_ibsth1.py  pyproject.toml  sensors_to_prometheus.py  switchbot.py
roles/inkbird_ibsth/tasks/: install.yml
roles/inkbird_ibsth/templates/: config.ini.j2
roles/prometheus/defaults/: main.yml
roles/prometheus/handlers/: main.yml
roles/prometheus/tasks/: configure.yml  install.yml  main.yml
roles/prometheus/templates/etc/prometheus/: prometheus.yml.j2
roles/prometheus/templates/etc/systemd/system/: prometheus-node-exporter.service.j2  prometheus.service.j2
roles/python3/tasks/: install.yml
roles/sensor_collector/defaults/: main.yml
roles/sensor_collector/files/: pyproject.toml  remo.py  sensors_to_prometheus.py  test_switchbot.py
roles/sensor_collector/tasks/: install.yml
roles/sensor_collector/templates/: config.ini.j2
